--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToDoList</string>
+    <string name="description_task">Description</string>
+    <string name="init_text">Due date</string>
+    <string name="pick_date">Pick date</string>
 </resources>
