Re-added the toolbar missing in the Adding Task layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ToDoList</string>
+    <string name="app_name">Task manager</string>
     <string name="description_task">Description</string>
     <string name="init_text">Due date</string>
     <string name="pick_date">Pick date</string>
