--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Task manager</string>
     <string name="description_task">Description</string>
-    <string name="init_text">Due date</string>
+    <string name="init_date_text">Due date</string>
     <string name="pick_date">Pick date</string>
     <string name="add_task">Add a task</string>
     <string name="add_category">Add a category</string>
     <string name="remove_category">Remove a category</string>
+    <string name="init_text">N.C</string>
+    <string name="status">Status</string>
 </resources>
